--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
