--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-qrcode-svg": "^6.2.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "expo-barcode-scanner": "~12.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
