--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-qrcode-svg": "^6.2.0",
     "react-redux": "^8.1.3",
-    "expo-barcode-scanner": "~12.5.3"
+    "strip-json-comments": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
