--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
@@ -22,6 +23,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-qrcode-svg": "^6.2.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-redux": "^8.1.3",
     "strip-json-comments": "^5.0.1"
   },
