--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "firebase": "^10.7.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-boring-avatars-pyt": "^1.0.1",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^14.1.0",
     "react-redux": "^8.1.3",
     "strip-json-comments": "^5.0.1"
   },
