--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~49.0.15",
+    "expo": "^49.0.21",
     "expo-barcode-scanner": "~12.5.3",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.0",
